samples/_failures_safe/1761155305_dac582_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c235245.c: In function ‘main’:
./samples/SAFE/__tmp_4c235245.c:153:9: error: expected declaration or statement at end of input
  153 |         printf("Failed to add block 3\n");
      |         ^~~~~~
./samples/SAFE/__tmp_4c235245.c:153:9: error: expected declaration or statement at end of input
